@@ -29,7 +29,7 @@
     <!-- build the core library -->
     <target name="build.core">    
         <concat destfile="${build.dir}/${core.build.file}"  fixlastline="true">
-            <header trimleading="yes">/* 
+            <header trimleading="yes">/*! 
             ${license.text}
             */
             var CSSLint = (function(){
@@ -49,7 +49,7 @@
     <!-- build the web worker library -->
     <target name="build.worker">    
         <concat destfile="${build.dir}/${worker.build.file}"  fixlastline="true">
-            <header trimleading="yes">/* 
+            <header trimleading="yes">/*!
             ${license.text}
             */
             </header>
@@ -66,7 +66,7 @@
     <target name="build.node">
     
         <concat destfile="${build.dir}/${node.build.file}"  fixlastline="true">
-            <header trimleading="yes">/* 
+            <header trimleading="yes">/*!
             ${license.text}
             */
             </header>
